fix(core): fold profile-named files with internal on-profile blocks, and fix a null-override NPE the fold exposed
- Confirmed against a real Spring Boot 4.1.1 app (extended the
  spring-env-benchmark fixture with an on-profile block coexisting with a
  same-named profile file, checked /actuator/env): the two sources merge
  together, and a profile-named file (application-prod.yml) wins a key
  conflict over an on-profile block inside a base file. Official Spring
  Boot docs don't cover this interaction explicitly -- this was the
  "Caso 3" gap deliberately left open by the previous ConfigFileGrouper fix.
- ConfigFileGrouper.mergeGroup() now folds every source of a NAMED profile
  together regardless of physical origin, with a 4-tier precedence:
  on-profile block in .yml/.yaml < on-profile block in .properties <
  named file .yml/.yaml < named file .properties. Previously an on-profile
  block was passed through untouched, producing a duplicate, redundant
  EffectiveConfig for that profile whenever a same-named file also existed.
- Reusing ProfileMerger.mergeProperties() for this fold (same pattern as
  the earlier base-file fold) broke two ways once a real null-override
  case existed in the fixture: (1) ConfigDocument built its properties map
  via Map.copyOf(), which throws on a null value, and mergeProperties()
  always resolves an explicit-null override to a real null immediately;
  (2) more seriously, stripping sentinels at this intermediate fold step
  would silently lose an empty-list marker before the later, real
  ProfileMerger.merge() pass ever sees it, so a list explicitly emptied at
  this fold would fail to purge the true base's list -- the same class of
  silent data loss as the original bug this session started from.
- Added ProfileMerger.mergeWithoutStrippingSentinels() (identical merge/purge
  logic, without the final sentinel strip) for ConfigFileGrouper's
  intermediate folds; ConfigFileGrouper's earlier base-file fold now uses it
  too, for the 