@@ -1,5 +1,7 @@
 package dev.scg.core;
 
+import java.util.Collections;
+import java.util.LinkedHashMap;
 import java.util.Map;
 import java.util.Objects;
 import java.util.Optional;
@@ -12,6 +14,13 @@ import java.util.Optional;
  * This is the "raw" document — not yet merged with anything. ProfileMerger
  * consumes a list of ConfigDocument objects (all from the same file) and
  * produces an EffectiveConfig (the already-merged result, ready for the rules).
+ * <p>
+ * {@code properties} may contain a {@code null} value: ConfigFileGrouper can
+ * fold multiple physical sources of the same precedence tier together before
+ * ProfileMerger ever sees them, and an explicit-null override resolves to a
+ * real Java {@code null} immediately as part of that fold (not deferrable —
+ * see {@code ProfileMerger.mergeWithoutStrippingSentinels}). {@code Map.copyOf}
+ * would reject that value, so a plain unmodifiable copy is used instead.
  */
 public record ConfigDocument(
         Optional<String> profile,
@@ -20,6 +29,6 @@ public record ConfigDocument(
     public ConfigDocument {
         Objects.requireNonNull(profile, "profile cannot be null (use Optional.empty())");
         Objects.requireNonNull(properties, "properties cannot be null");
-        properties = Map.copyOf(properties);
+        properties = Collections.unmodifiableMap(new LinkedHashMap<>(properties));
     }
 }
